# typetris

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  input.css  package-lock.json  ref.json  tailwind.config.js
.github/workflows/: deploy.yml  pr_check.yml
src/: app.rs  main.rs
src/app/: game.rs  mod.rs
src/app/game/: swatch.rs
src/game/: block.rs  board.rs  english.rs  mod.rs  renderer.rs  settings.rs  timer.rs
src/game/block/: bounding_box.rs
