[package]
name = "typetris"
version = "0.1.0"
edition = "2024"
description = "A Tetris and typing game hybrid."
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-console = "0.3.0"
gloo-timers = "0.3.0"
rand = "0.9.2"
web-sys = { version = "0.3.77", features = ["CanvasRenderingContext2d", "DomRect", "Element", "HtmlCanvasElement", "Window"] }
yew = { version="0.21", features=["csr"] }
